done features when combine with FE
