# db/sqlc/ProductType.sql.go
@@ -19,7 +19,7 @@ INSERT INTO "Product_Type" (
 ) VALUES (
   $1, $2
 )
-RETURNING id, name, slug, create_at, update_at
+RETURNING _id, name, slug, create_at, update_at
 `
 
 type CreateProductTypeParams struct {
@@ -42,7 +42,7 @@ func (q *Queries) CreateProductType(ctx context.Context, arg CreateProductTypePa
 
 const deleteManyProductTypesByIds = `-- name: DeleteManyProductTypesByIds :exec
 DELETE FROM "Product_Type"
-WHERE id = ANY($1::bigint[])
+WHERE "_id" = ANY($1::bigint[])
 `
 
 func (q *Queries) DeleteManyProductTypesByIds(ctx context.Context, dollar_1 []int64) error {
@@ -52,21 +52,21 @@ func (q *Queries) DeleteManyProductTypesByIds(ctx context.Context, dollar_1 []in
 
 const deleteProductTypeById = `-- name: DeleteProductTypeById :exec
 DELETE FROM "Product_Type"
-WHERE id = $1
+WHERE "_id" = $1
 `
 
-func (q *Queries) DeleteProductTypeById(ctx context.Context, id int64) error {
-	_, err := q.db.ExecContext(ctx, deleteProductTypeById, id)
+func (q *Queries) DeleteProductTypeById(ctx context.Context, ID int64) error {
+	_, err := q.db.ExecContext(ctx, deleteProductTypeById, ID)
 	return err
 }
 
 const getProductTypeById = `-- name: GetProductTypeById :one
-SELECT id, name, slug, create_at, update_at FROM "Product_Type"
-WHERE id = $1 LIMIT 1
+SELECT _id, name, slug, create_at, update_at FROM "Product_Type"
+WHERE "_id" = $1 LIMIT 1
 `
 
-func (q *Queries) GetProductTypeById(ctx context.Context, id int64) (ProductType, error) {
-	row := q.db.QueryRowContext(ctx, getProductTypeById, id)
+func (q *Queries) GetProductTypeById(ctx context.Context, ID int64) (ProductType, error) {
+	row := q.db.QueryRowContext(ctx, getProductTypeById, ID)
 	var i ProductType
 	err := row.Scan(
 		&i.ID,
@@ -79,7 +79,7 @@ func (q *Queries) GetProductTypeById(ctx context.Context, id int64) (ProductType
 }
 
 const getProductTypeByName = `-- name: GetProductTypeByName :one
-SELECT id, name, slug, create_at, update_at FROM "Product_Type"
+SELECT _id, name, slug, create_at, update_at FROM "Product_Type"
 WHERE name = $1 LIMIT 1
 `
 
@@ -97,34 +97,34 @@ func (q *Queries) GetProductTypeByName(ctx context.Context, name string) (Produc
 }
 
 const listProductType = `-- name: ListProductType :many
-SELECT id, name, slug, create_at, update_at,COUNT("Product_Type".id) OVER() AS "totalCount" FROM "Product_Type"
-WHERE  $3 ::text = '' or name ILIKE concat('%',$3,'%')
+SELECT _id, name, slug, create_at, update_at,COUNT("Product_Type"."_id") OVER() AS "totalCount" FROM "Product_Type"
+WHERE  $1 ::text = '' or name ILIKE concat('%',$1,'%')
 ORDER BY 
   CASE 
-        WHEN $4 ::varchar = 'name asc' THEN name END ASC,
+        WHEN $2 ::varchar = 'name asc' THEN name END ASC,
   CASE 
-        WHEN $4 = 'name desc' THEN name END DESC,
+        WHEN $2 = 'name desc' THEN name END DESC,
   CASE 
-        WHEN $4 = 'slug asc' THEN slug END ASC,
+        WHEN $2 = 'slug asc' THEN slug END ASC,
   CASE 
-        WHEN $4 = 'slug desc' THEN slug END DESC,
+        WHEN $2 = 'slug desc' THEN slug END DESC,
   CASE 
-        WHEN $4 = 'created_date asc' THEN create_at END ASC,
+        WHEN $2 = 'created_date asc' THEN create_at END ASC,
   CASE 
-        WHEN $4 = 'created_date desc' THEN create_at END DESC
-LIMIT $1
-OFFSET $2
+        WHEN $2 = 'created_date desc' THEN create_at END DESC
+LIMIT NULLIF($4 :: int, 0)
+OFFSET NULLIF($3 :: int, 0)
 `
 
 type ListProductTypeParams struct {
-	Limit   int32  `json:"limit"`
-	Offset  int32  `json:"offset"`
-	Search  string `json:"search"`
-	OrderBy string `json:"order_by"`
+	Search    string `json:"search"`
+	OrderBy   string `json:"order_by"`
+	OffsetOpt int32  `json:"offset_opt"`
+	LimitOpt  int32  `json:"limit_opt"`
 }
 
 type ListProductTypeRow struct {
-	ID         int64        `json:"id"`
+	ID         int64        `json:"_id"`
 	Name       string       `json:"name"`
 	Slug       string       `json:"slug"`
 	CreateAt   time.Time    `json:"create_at"`
@@ -134,10 +134,10 @@ type ListProductTypeRow struct {
 
 func (q *Queries) ListProductType(ctx context.Context, arg ListProductTypeParams) ([]ListProductTypeRow, error) {
 	rows, err := q.db.QueryContext(ctx, listProductType,
-		arg.Limit,
-		arg.Offset,
 		arg.Search,
 		arg.OrderBy,
+		arg.OffsetOpt,
+		arg.LimitOpt,
 	)
 	if err != nil {
 		return nil, err
@@ -169,14 +169,14 @@ func (q *Queries) ListProductType(ctx context.Context, arg ListProductTypeParams
 
 const updateProductType = `-- name: UpdateProductType :one
 UPDATE "Product_Type" SET name = $1,slug = $2,update_at = NOW()
-WHERE id = $3
-RETURNING id, name, slug, create_at, update_at
+WHERE "_id" = $3
+RETURNING _id, name, slug, create_at, update_at
 `
 
 type UpdateProductTypeParams struct {
 	Name string `json:"name"`
 	Slug string `json:"slug"`
-	ID   int64  `json:"id"`
+	ID   int64  `json:"_id"`
 }
 
 func (q *Queries) UpdateProductType(ctx context.Context, arg UpdateProductTypeParams) (ProductType, error) {
