# docs/swagger.json
@@ -292,11 +292,9 @@
                 "summary": "Get all city",
                 "parameters": [
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -304,11 +302,9 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -526,11 +522,9 @@
                 "summary": "Get all ProductType",
                 "parameters": [
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -538,11 +532,9 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -744,6 +736,71 @@
             }
         },
         "/api/products": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all Product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get all Product",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "productType",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.GetAllProductAdmin"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -896,6 +953,68 @@
                                 "type": "array",
                                 "items": {
                                     "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.Product"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/public": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all Product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get all Product",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "productType",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.GetAllProductPublic"
                                 }
                             }
                         }
@@ -1223,7 +1342,7 @@
                 }
             }
         },
-        "/api/role": {
+        "/api/roles": {
             "get": {
                 "security": [
                     {
@@ -1240,11 +1359,9 @@
                 "summary": "Get all role",
                 "parameters": [
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -1252,11 +1369,9 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -1314,7 +1429,7 @@
                 }
             }
         },
-        "/api/role/delete-many": {
+        "/api/roles/delete-many": {
             "delete": {
                 "security": [
                     {
@@ -1350,7 +1465,7 @@
                 }
             }
         },
-        "/api/role/{roleId}": {
+        "/api/roles/{roleId}": {
             "get": {
                 "security": [
                     {
@@ -1459,9 +1574,47 @@
         }
     },
     "definitions": {
+        "github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductAdminRow": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "integer"
+                },
+                "countInStock": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "totalCount": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductLikeRow": {
             "type": "object",
             "properties": {
+                "_id": {
+                    "type": "integer"
+                },
                 "countInStock": {
                     "type": "integer"
                 },
@@ -1480,8 +1633,76 @@
                 "discountStartDate": {
                     "type": "string"
                 },
-                "id": {
+                "image": {
+                    "type": "string"
+                },
+                "likedBy": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "location": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "sold": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "totalCount": {
+                    "type": "integer"
+                },
+                "totalLikes": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "integer"
+                },
+                "uniqueViews": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "views": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductPublicRow": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "integer"
+                },
+                "countInStock": {
+                    "type": "integer"
+                },
+                "create_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "discount": {
+                    "type": "integer"
+                },
+                "discountEndDate": {
+                    "type": "string"
+                },
+                "discountStartDate": {
+                    "type": "string"
                 },
                 "image": {
                     "type": "string"
@@ -1533,6 +1754,9 @@
         "github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductRelatedRow": {
             "type": "object",
             "properties": {
+                "_id": {
+                    "type": "integer"
+                },
                 "countInStock": {
                     "type": "integer"
                 },
@@ -1550,9 +1774,6 @@
                 },
                 "discountStartDate": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "image": {
                     "type": "string"
@@ -1604,6 +1825,9 @@
         "github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductViewRow": {
             "type": "object",
             "properties": {
+                "_id": {
+                    "type": "integer"
+                },
                 "countInStock": {
                     "type": "integer"
                 },
@@ -1621,9 +1845,6 @@
                 },
                 "discountStartDate": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "image": {
                     "type": "string"
@@ -1775,7 +1996,7 @@
             "properties": {
                 "name": {
                     "type": "string",
-                    "minLength": 4
+                    "minLength": 1
                 },
                 "slug": {
                     "type": "string",
@@ -1995,6 +2216,9 @@
                 "firstName": {
                     "type": "string"
                 },
+                "image": {
+                    "type": "string"
+                },
                 "lastName": {
                     "type": "string"
                 },
@@ -2002,8 +2226,8 @@
                     "type": "string"
                 },
                 "phoneNumber": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "string",
+                    "format": "string"
                 }
             }
         },
@@ -2098,7 +2322,7 @@
                     "type": "string"
                 },
                 "phoneNumber": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "role": {
                     "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.Role"
@@ -2154,6 +2378,40 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductViewRow"
+                    }
+                },
+                "totalCount": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.GetAllProductAdmin": {
+            "type": "object",
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductAdminRow"
+                    }
+                },
+                "totalCount": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_NghiaLeopard_Go-Ecommerce-Backend_internal_api_handler_response.GetAllProductPublic": {
+            "type": "object",
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_NghiaLeopard_Go-Ecommerce-Backend_db_sqlc.GetAllProductPublicRow"
                     }
                 },
                 "totalCount": {
@@ -2437,7 +2695,7 @@
                     "type": "string"
                 },
                 "phoneNumber": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "resetToken": {
                     "type": "string"
